Next Release
============

  * Experimental support for wire compression.
    * Support for snappy and zlib. MongoDB 3.4 only supports snappy, while zlib
      support is expected in MongoDB 3.6. Wire compression is still experimental
      for MongoDB clients, and therefore hidden from default configuration.
      The enable, configure mongoc like so:
      ./configure --enable-snappy --enable-zlib MONGOC_36_EXPERIMENT=yes
    * New functions: mongoc_uri_get_compressors & mongoc_uri_set_compressors, to
      get and set compressor configuration on mongoc_uri_t
    * Added support for comma seperated "compressors" connection string option (e.g.
      mongodb://localhost/?compressors=snappy,zlib)
    * Added support for configuring zlib compression level in the connection string
      (e.g. mongodb://localhost/?compressors=zlib&zlibcompressionlevel=8)
  * Now requires the use of CMake config files for libbson to build libmongoc
    with CMake
  * Added pkg-config support for libressl.
  * New function mongoc_uri_set_auth_mechanism to update the authentication
    mechanism of a mongoc_uri_t after it is created from a string.
  * New function mongoc_bulk_operation_insert_with_opts provides immediate
    error checking.
  * New function mongoc_uri_new_with_error provides a way to parse a connection
    string, and retrieve the failure reason, if any.
  * Support for MongoDB Connection String specification
    * All connection string options are now represented by MONGOC_URI_xxx macros
    * Paths to Unix Domain Sockets must be url encoded
    * Repeated options now issue warnings
    * Special characters in username, password and other values must be url encoded
    * Unsupported connection string options now issue warnings
    * Boolean values can now be represented as true/yes/y/t/1 and false/no/n/f/0.
  * New function mongoc_cursor_error_document provides access to server's error
    reply if a query or command fails.